[project]
name = "resumeforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=3.2.4",
    "jinja2>=3.1.6",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.10",
    "playwright>=1.59.0",
]
